# mnist-perceptron

./: .gitignore  LICENSE  README.md  micronn.py  micronn_train.py  model_training.py  pyproject.toml  pytorch_train.py  requirements.txt
micronn/: activations.py  layer.py  loss.py  nn.py  utils.py
models/micronn/: model.pkl  results.json
models/micronn/micronn_1/: layers.pkl  results.json
models/micronn/micronn_2/: layers.pkl  results.json
models/micronn/micronn_3/: layers.pkl  results.json
models/micronn/micronn_4/: layers.pkl  results.json
models/micronn/micronn_5/: layers.pkl  results.json
models/micronn_1/: layers.pkl  results.json
models/micronn_2/: layers.pkl  results.json
models/micronn_3/: layers.pkl  results.json
models/micronn_4/: layers.pkl  results.json
models/micronn_5/: layers.pkl  results.json
models/micronn_6/: layers.pkl  results.json
models/pytorch/: model.pkl  results.json
models/pytorch_4/: results.json
scratch_nn/: activations.py  layer.py  loss.py  nn.py  utils.py
